# ship-control

./: .gitignore  CMakeLists.txt  Config.cpp  Config.hpp  ConsoleLog.cpp  ConsoleLog.hpp  DataProvider.hpp  EvdevConfig.cpp  EvdevConfig.hpp  EvdevReader.cpp  EvdevReader.hpp  GPIOEngineConfig.hpp  GPIOEngineController.cpp  GPIOEngineController.hpp  GPIOPWMThread.cpp  GPIOPWMThread.hpp  GPIOSteeringConfig.hpp  GPIOSteeringController.cpp  GPIOSteeringController.hpp  GPIOSwitch.cpp  GPIOSwitch.hpp  GPIOSwitchConfig.hpp  GPIOUtil.cpp  GPIOUtil.hpp  IPCClient.cpp  IPCClient.hpp  IPCConfig.hpp  IPCRequestHandler.cpp  IPCRequestHandler.hpp  InputQueue.cpp  InputQueue.hpp  Log.cpp  Log.hpp  MaestroCmd.cpp  MaestroCmd.hpp  MaestroConfig.cpp  MaestroConfig.hpp  MaestroController.cpp  MaestroController.hpp  README.md  (+12 more)
doc/: Arch.md  components.puml  remote_control.puml
test/: config_test.cpp  evdev_test.cpp  ipc_handler_test.cpp  maestro_test.cpp  main.cpp  testconfig  unsock_test.cpp
